examples/invalid/04_TypeAppArrowHead.lune
module Bad exposing (f)

f : (Int -> Int) Bool
f =
  unit
